--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "heroku": "^7.3.0",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
